--- a/.env
+++ b/.env
@@ -1,8 +1,8 @@
-APP_NAME='Tung Pham'
+APP_NAME='Truong Pham'
 APP_ENV=local
 APP_KEY=base64:n4rKJHhpFCxqR9ri+T3KS+2pKqz6fhV5tAO/G+rFPsw=
 APP_DEBUG=true
-APP_URL=https://tungpham.herokuapp.com
+APP_URL=https://truongpham.herokuapp.com
 
 LOG_CHANNEL=stack
 LOG_LEVEL=debug
