--- a/.gitignore
+++ b/.gitignore
@@ -31,3 +31,4 @@ public/assets/common/cv/*
 !public/assets/common/cv/default.png
 public/assets/common/img/projects/*
 !public/assets/common/img/projects/.gitkeep
+node_modules
