--- a/.gitignore
+++ b/.gitignore
@@ -11,7 +11,7 @@ yarn-error.log
 _ide_helper.php
 .phpstorm.meta.php
 storage/installed
-public/js/client
+# public/js/client
 public/assets/common/img/logo/*
 !public/assets/common/img/logo/.gitkeep
 !public/assets/common/img/logo/default.png
