--- a/.env
+++ b/.env
@@ -8,11 +8,11 @@ LOG_CHANNEL=stack
 LOG_LEVEL=debug
 
 DB_CONNECTION=mysql
-DB_HOST=kfgk8u2ogtoylkq9.cbetxkdyhwsb.us-east-1.rds.amazonaws.com
+DB_HOST=us-cdbr-east-05.cleardb.net
 DB_PORT=3306
-DB_DATABASE=star176vng2984xm
-DB_USERNAME=fuvc0v3khhq4l2s4
-DB_PASSWORD=ta6epjoj0vetdb70
+DB_DATABASE=heroku_2458bc9103f2118
+DB_USERNAME=b8f080a4950d63
+DB_PASSWORD=78c5bb40
 
 BROADCAST_DRIVER=log
 CACHE_DRIVER=file
